2004-11-04  Johan Dahlin  <johan@gnome.org>

	* tests/Makefile.am:
	* tests/gtype.py:
	* tests/test-thread.c:
	* tests/test-thread.h:
	* tests/test-unknown.c:
	* tests/test-unknown.h:
	* tests/test_unknown.py:
	* tests/testhelpermodule.c:

	Add tests for dynamic/unknown objects and interfaces.
	
2004-10-28  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.defs (gtk_combo_box_set_model)
	(gtk_entry_completion_set_model) Allow model to be None and to
	default to None similar to gtk_tree_view_set_model.
	Fixes #155247 (Olivier Aubert).

2004-10-22  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_alignment_new): Change all
	gtk.Alignment constructor parameter default values back to 0, as
	it was before pygtk 2.4.

2004-10-21  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/gtk.override (_wrap_gtk_adjustment_new): Change all
	gtk.Adjustment constructor parameter default values back to 0, as
	it was before pygtk 2.4.

2004-10-13  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gobject/pygobject.h: s/typename/typename_/, because typename is
	a C++ keyword.
	Add G_BEGIN_DECLS / G_END_DECLS.
	Fixes #155304: pygobject.h cannot be included in C++ programs.

2004-10-05  Johan Dahlin  <johan@gnome.org>

	* gtk/libglade.override (pyglade_xml_lookup_type): Fix silly silly
	bug. When using typedict for a glade.XML object, AttributeErrors
	set when calling PyMapping_GetItemString on a dictionary isn't
	reset.
	
	I wonder why nobody tried this before? Sigh. At least it's my
	fault, so I have no one else to blame, even though I'm trying hard

2004-10-03  John Finlay  <finlay@moeraki.com>

	* examples/pygtk-demo/demos/dnd.py Fix popup dest code and
	use gobject timeout functions.

2004-10-03  Johan Dahlin  <johan@gnome.org>

	* configure.in: Post release version bump

=== PyGtk 2.4.0 ===
2004-10-03  Johan Dahlin  <johan@gnome.org>

	* NEWS: Update

2004-10-01  John Finlay  <finlay@moeraki.com>
