@@ -1,5 +1,9 @@
 2004-11-04  Johan Dahlin  <johan@gnome.org>
 
+	* examples/gtk/filechooser.py: Fix typo
+
+	* examples/gtk/uimanager.py: Simplify
+
 	* tests/Makefile.am:
 	* tests/gtype.py:
 	* tests/test-thread.c:
